# libiot

./: CLAUDE.md  Cargo.toml  rustfmt.toml
.claude/: settings.local.json
.claude/agents/: iot-protocol-reviewer.md  rust-api-reviewer.md
.claude/commands/: github-pr-autosubscribe.md  pre-commit.md  review-iot-protocol.md  review-rust-api.md
.claude/skills/iot-crate-standards/: SKILL.md
.claude/skills/update-project-trackers/: SKILL.md
.claude/skills/update-project-trackers/references/: project_tracker_format.md
.claude/skills/update-project-trackers/scripts/: scan_todos.py
.github/workflows/: ci.yml
crates/libiot/: Cargo.toml  README.md  project-tracker.md
crates/libiot-cli/: Cargo.toml  README.md  project-tracker.md
crates/libiot-cli/src/: cli.rs  delegation.rs  discovery.rs  error.rs  main.rs  output.rs  settings.rs
crates/libiot-cli/src/commands/: completions.rs  get.rs  install.rs  list.rs  mod.rs  set.rs  uninstall.rs  unset.rs
crates/libiot-cli/src/commands/tests/: completions_tests.rs  get_tests.rs  install_tests.rs  list_tests.rs  mod.rs  set_tests.rs  uninstall_tests.rs  unset_tests.rs
crates/libiot-cli/src/tests/: cli_tests.rs  delegation_tests.rs  discovery_tests.rs  error_tests.rs  mod.rs  settings_tests.rs
crates/libiot-cli/tests/: delegation_e2e.rs  set_alias_e2e.rs
crates/libiot-lutron-radiora2-rrmainrep/docs/: TELNET_PROTOCOL.md
crates/libiot-rollease-automate-pulse-pro-hub/: Cargo.toml  PULSE_PRO_LOCAL_API.md  README.md  project-tracker.md
crates/libiot-rollease-automate-pulse-pro-hub-cli/: Cargo.toml  README.md  project-tracker.md
crates/libiot-rollease-automate-pulse-pro-hub-cli/src/: cli.rs  error.rs  hub_connection.rs  main.rs  motor_selector.rs  output.rs
crates/libiot-rollease-automate-pulse-pro-hub-cli/src/commands/: broadcast.rs  completions.rs  control.rs  dangerous.rs  hub.rs  mod.rs  motor.rs
crates/libiot-rollease-automate-pulse-pro-hub-cli/src/tests/: hub_connection_tests.rs  mod.rs  motor_selector_tests.rs  output_tests.rs
crates/libiot-rollease-automate-pulse-pro-hub-cli/tests/: control_e2e.rs  hub_query_e2e.rs
crates/libiot-rollease-automate-pulse-pro-hub-cli/tests/common/: mod.rs
crates/libiot-rollease-automate-pulse-pro-hub/src/: automate_pulse_pro_hub.rs  error.rs  hub_info.rs  hub_snapshot.rs  lib.rs  motor.rs  motor_address.rs  motor_position.rs  motor_type.rs  motor_version.rs  motor_voltage.rs  transport.rs
crates/libiot-rollease-automate-pulse-pro-hub/src/codec/: encoder.rs  incoming_frame.rs  mod.rs  parser.rs
crates/libiot-rollease-automate-pulse-pro-hub/src/codec/tests/: encoder_tests.rs  mod.rs  parser_tests.rs
crates/libiot-rollease-automate-pulse-pro-hub/src/tests/: automate_pulse_pro_hub_tests.rs  error_tests.rs  mod.rs  motor_address_tests.rs  motor_type_tests.rs  motor_voltage_tests.rs  transport_tests.rs
crates/libiot/src/: cli.rs  delegation.rs  error.rs
crates/libiot/src/commands/: completions.rs  install.rs  list.rs  mod.rs  uninstall.rs  unset.rs  update.rs
crates/libiot/src/commands/tests/: completions_tests.rs  install_tests.rs  set_tests.rs  uninstall_tests.rs
crates/libiot/src/tests/: cli_tests.rs  delegation_tests.rs  error_tests.rs  output_tests.rs  settings_tests.rs
crates/libiot/tests/: completions_e2e.rs  list_e2e.rs  set_env_var_e2e.rs
crates/libiot/tests/common/: mod.rs
scripts/: _include.sh  bump-version.sh  check-libiot-keywords.sh
