[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition      = "2024"
rust-version = "1.85"
license      = "MIT"
authors      = ["Jeff Morrison <lbljeffmo@gmail.com>"]
repository   = "https://github.com/jeffmo/libiot"
publish      = false

[workspace.dependencies]
# Pinned once here, consumed by each member via `workspace = true`.
clap          = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"
clap_mangen   = "0.2"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
thiserror     = "2"
tokio         = { version = "1", features = ["net", "io-util", "time", "sync", "macros", "rt"] }

[workspace.lints.rust]
unsafe_code  = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allowed overrides (justify every entry):
#
# `module_name_repetitions` — we deliberately name types after their modules
# (e.g. `motor_address::MotorAddress`) per the workspace one-type-per-file
# convention. Repetition is the point, not an accident.
module_name_repetitions = "allow"
#
# `missing_errors_doc` — error cases are documented on the crate-level
# `Error` enum variants themselves, not repeated on every function that
# returns `Result`. Rustdoc for the error enum is authoritative.
missing_errors_doc = "allow"
#
# `trivially_copy_pass_by_ref` — the public client APIs take small
# domain-type arguments (e.g. `&MotorAddress`) by reference for API
# ergonomics and consistency across the workspace, not for any performance
# reason. Clippy's micro-optimization suggestion would save one pointer
# dereference per call on a 3-byte Copy type, which is irrelevant for
# IoT-control workloads running at a few commands per second.
trivially_copy_pass_by_ref = "allow"
