[package]
name        = "libiot"
version     = "0.7.0"
description = "Unified CLI dispatcher for the libiot ecosystem"
categories  = ["command-line-utilities", "hardware-support", "network-programming"]
keywords    = ["libiot", "iot", "cli", "dispatcher"]

edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
publish.workspace      = true

[[bin]]
name = "libiot"
path = "src/main.rs"

[dependencies]
clap          = { workspace = true }
clap_complete = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile   = "3"

[lints]
workspace = true
